# learngl

./: .gitignore  CMakeLIsts.txt  Makefile
shaders/: 10_1_material.fs  10_2_diffuse_map.fs  11_1_diffuse_map.fs  11_1_diffuse_map.vs  11_2_specular_map.fs  12_1_light_casters_directional.fs  12_2_light_casters_point.fs  12_3_light_casters_spot.fs  12_4_light_casters_spot_soft.fs  13_1_multiple_lights.fs  14_1_model_loading.vs  14_2_model_with_lighting.fs  15_1_depth_testing.fs  15_1_depth_testing.vs  15_2_visualize_depth_buffer.fs  15_3_visualize_linear_depth.fs  17_1_blending_discard.fs  19_1_framebuffers_inversion.fs  19_2_framebuffers_grayscale.fs  19_3_framebuffers_kernel_sharpen.fs  19_4_framebuffers_kernel_blur.fs  19_5_framebuffers_kernel_edge_detection.fs  20_1_cubemaps_skybox.fs  20_2_cubemaps_skybox_optimized.vs  20_3_cubemaps_environment_mapping.fs  20_3_cubemaps_environment_mapping.vs  20_3_cubemaps_environment_mapping_refraction.fs  21_1_point_size.fs  21_1_point_size.vs  21_2_frag_coord.fs  21_3_backfacing_texture.fs  21_4_frag_depth.fs  21_5_interface_blocks.fs  21_5_interface_blocks.vs  21_6_uniform_buffer_objects.vs  22_1_geometry_shader_houses.fs  22_1_geometry_shader_houses.gs  22_2_geometry_shader_exploding.gs  22_2_geometry_shader_exploding.vs  22_3_visualize_normal_vector.gs  (+21 more)
src/: 10_1_material.cpp  11_1_diffuse_map.cpp  11_2_specular_map.cpp  12_1_light_casters_directional.cpp  12_2_light_casters_point.cpp  12_3_light_casters_spot.cpp  12_4_light_casters_spot_soft.cpp  13_1_multiple_lights.cpp  14_1_model_loading.cpp  14_2_model_with_lighting.cpp  15_1_depth_testing.cpp  15_2_visualize_depth_buffer.cpp  15_3_visualize_linear_depth.cpp  16_1_stencil_testing.cpp  17_1_blending_discard.cpp  17_2_blending_sorted.cpp  18_1_face_culling.cpp  19_1_framebuffers_inversion.cpp  19_2_framebuffers_grayscale.cpp  19_3_framebuffers_kernel_sharpen.cpp  19_4_framebuffers_kernel_blur.cpp  19_5_framebuffers_kernel_edge_detection.cpp  1_1_hello_window.cpp  1_2_hello_window_clear.cpp  20_1_cubemaps_skybox.cpp  20_2_cubemaps_skybox_optimized.cpp  20_3_cubemaps_environment_mapping.cpp  20_3_cubemaps_environment_mapping_reflection.cpp  20_4_cubemaps_environment_mapping_refraction.cpp  21_1_point_size.cpp  21_2_frag_coord.cpp  21_3_backfacing_texture.cpp  21_4_frag_depth.cpp  21_5_interface_blocks.cpp  21_6_uniform_buffer_objects.cpp  22_1_geometry_shader_houses.cpp  22_2_geometry_shader_exploding.cpp  22_3_visualize_normal_vector.cpp  23_1_instancing_quads.cpp  23_2_instanced_arrays.cpp  (+43 more)
